[project]
name = "rpcclient"
version = "3.22.3"
description = "rpcclient for connecting with the rpcserver"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["ios", "macos", "linux", "automation", "remote-shell", "remote-control", "ipython"]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "matan", email = "matan1008@gmail.com" }
]
maintainers = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "matan", email = "matan1008@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = ["pytest"]
docs = ["toml", "myst_parser", "sphinx", "sphinx-rtd-theme"]

[project.urls]
"Homepage" = "https://github.com/doronz88/rpc-project"
"Bug Reports" = "https://github.com/doronz88/rpc-project/issues"

[project.scripts]
rpcclient = "rpcclient.__main__:rpcclient"
rpclocal = "rpcclient.__main__:rpclocal"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
