[project]
name = "rpcclient"
description = "rpcclient for connecting with the rpcserver"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007" }
keywords = [
    "ios",
    "macos",
    "linux",
    "automation",
    "remote-shell",
    "remote-control",
    "ipython",
]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "matan", email = "matan1008@gmail.com" },
    { name = "netanelc305", email = "netanelc305@pm.me" },
]
maintainers = [
    { name = "doronz88", email = "doron88@gmail.com" },
    { name = "matan", email = "matan1008@gmail.com" },
    { name = "netanelc305", email = "netanelc305@pm.me" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
dependencies = [
    "construct>=2.9.29",
    "construct-typing~=0.7.0",
    "click",
    "coloredlogs",
    "IPython",
    "traitlets",
    "pygments",
    "objc_types_decoder",
    "pycrashreport>=1.0.2",
    "lief",
    "capstone>=5.0.3",
    "xonsh",
    "plumbum",
    "pygnuutils",
    "tqdm",
    "osstatus>=1.0.2",
    "requests",
    "protobuf",
    "inquirer3",
    "zyncio~=0.15.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-repeat", "pytest-asyncio"]
docs = ["toml", "myst_parser", "sphinx", "sphinx-rtd-theme"]
dev = ["rpcclient[test,docs]"]

[project.urls]
"Homepage" = "https://github.com/doronz88/rpc-project"
"Bug Reports" = "https://github.com/doronz88/rpc-project/issues"

[project.scripts]
rpcclient = "rpcclient.__main__:rpcclient"
rpclocal = "rpcclient.__main__:rpclocal"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "rpcclient._version.__version__" }

[tool.setuptools_scm]
version_file = "rpcclient/_version.py"
root = "../.."

[build-system]
requires = ["setuptools>=43.0.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    # isort
    "I",
]
ignore = [
    # LineTooLong
    "E501",
    # Custom error classes
    "TRY003",
    # Abstract `raise` to an inner function
    "TRY301",
    # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
    "B019",
]
exclude = ["rpcclient/protos/*"]

[tool.ruff.lint.isort]
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]

[tool.ruff.format]
preview = true

[tool.pyright]
include = ["rpcclient", "tests"]
ignore = [
    "rpcclient/protos/*",
    "rpcclient/core/xonshrc.py",
    "rpcclient/console/*",       # Not yet typed
]
reportUnnecessaryComparison = "warning"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
